--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
 
     <div class="containet">
-        <button><a href="#">Project 1#</a></button>
-        <button><a href="#">Project 2#</a></button>
-        <button><a href="#">Project 3#</a></button>
-        <button><a href="#">Project 4#</a></button>
+        <button><a href="zed-010.github.io/ScriptProject/">Project 1#</a></button>
+        <button><a href="zed-010.github.io/RamPageCom/">Project 2#</a></button>
+        <button><a href="zed-010.github.io/LawyerProject/">Project 3#</a></button>
+        <button><a href="zed-010.github.io/MusicPlayer/">Project 4#</a></button>
     </div>
 
        
